<resources>
    <string name="app_name">My Inventory</string>

    <string name="input_name_text">Name: </string>
    <string name="input_price_text">Price: </string>
    <string name="input_quantity_text">Quantity: </string>
    <string name="input_category_text">Category: </string>
    <string name="input_ingredients_text">Ingredients: </string>

    <string name="input_select_ingredient_text">Select Ingredient</string>
    <string name="input_select_category_text">Select Category</string>
    <string name="input_add_category_text">Add Category</string>

    <string name="title_activity_add_meal">Add Meal</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="title_activity_update_item">Update Item</string>
    <string name="title_activity_update_meal">Update Meal</string>
    <string name="done_button_title">Done</string>
    <string name="add_button_text">Add</string>
    <string name="update_button_text">Update</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="new_category_text">New Category</string>

    <string name="not_valid_data_message">Please enter valid data</string>
    <string name="no_ingredients_message">Please select some ingredients</string>
    <string name="no_category_message">Please select a category</string>
    <string name="name_already_exist">That name already exists</string>
    <string name="not_valid_name">Please enter a valid name</string>
    <string name="not_valid_price">Please enter a valid price</string>

    <string name="item_card_price_text">£%1$s</string>

    <string name="saved_items_key">saved_inventory_items</string>
    <string name="saved_meals_key">saved_meals_key</string>
    <string name="saved_categories_key">saved_categories_key</string>
    <string name="save_key">oowyfng89aye89fay98fadsf</string>

    <string name="inventory_items_empty">You don\'t appear to have any items in your inventory. Press the plus button to add items.</string>
    <string name="meals_list_empty">You don\'t appear to have any meals. Press the plus button to add a meal.</string>

    <string name="create_shopping_list">Create Shopping List</string>

    <string name="sort_by_name">Sort by name</string>
    <string name="delete_selected_items">Delete Selected Items</string>
    <string name="delete_selected_meals">Delete Selected Meals</string>
    <string name="make_meal_of_items">Make meal using items</string>

    <string name="title_activity_meal_list">MealListActivity</string>
    <string name="title_activity_meal_maker">MealMakerActivity</string>
    <string name="drawer_open">Open Navigation Menu</string>
    <string name="drawer_close">Close Navigation Menu</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_settings_option">Settings</string>
    <string name="navigation_drawer_inventory_option">Inventory</string>
    <string name="navigation_drawer_meals_option">Meals</string>

    <string name="delete_items_confirmation">Are you sure you want to delete the selected item(s)?</string>
    <string name="delete_meals_confirmation">Are you sure you want to delete the selected meal(s)?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>

    <string name="no_google_keep">Google Keep is not installed</string>
    <string name="no_shopping_items">There are no items that you need to shop for</string>

    <string name="shopping_list_title">Shopping List %1$s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
