<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:padding="5dp">

    <EditText
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:id="@+id/item_name_input"
        android:layout_row="0"
        android:layout_column="1" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_name_text"
        android:id="@+id/item_name_text"
        android:layout_row="0"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_price_text"
        android:id="@+id/item_price_text"
        android:layout_row="1"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/item_price_input"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="249dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_quantity_text"
        android:layout_gravity="center_vertical"
        android:id="@+id/item_quantity_text"
        android:layout_row="2"
        android:layout_column="0" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_quantity_picker"
        android:layout_row="2"
        android:layout_column="1" />
</GridLayout>