<?xml version="1.0" encoding="utf-8"?>


<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_add_meal"
        android:id="@+id/add_item_title_text"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"/>

    <EditText
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:id="@+id/meal_name_input"
        android:maxLines="1"
        android:layout_row="1"
        android:layout_column="1"
        android:imeOptions="actionNext" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_name_text"
        android:id="@+id/meal_name_text"
        android:layout_row="1"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_category_text"
        android:layout_gravity="center_vertical"
        android:id="@+id/meal_category_text"
        android:layout_row="2"
        android:layout_column="0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/input_category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:layout_gravity="end"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:visibility="gone"
            android:imeOptions="actionNext"
            android:id="@+id/meal_category_input" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/input_ingredients_text"
        android:layout_gravity="top"
        android:id="@+id/meal_ingredients_text"
        android:layout_row="3"
        android:layout_column="0"
        android:paddingTop="10dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_row="3"
        android:layout_column="1"
        android:scrollbarFadeDuration="0"
        android:scrollbarAlwaysDrawVerticalTrack="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:id="@+id/meal_ingredients_spinner_list">
        </LinearLayout>
    </ScrollView>


</GridLayout>


